[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mass_automation"
version = "0.1.0"
authors = [
    {name = "Daniil Boiko", email = "boiko@cmu.edu"},
]
description = "Mass spectrometry automation tools for the Medusa project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "pyopenms>=2.7.0",
    "tqdm>=4.64.0",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "matplotlib>=3.5.2",
    "torch>=1.12.0",
    "chemparse>=0.1.1",
    "bokeh>=2.4.3",
    "bokeh_sampledata",
    "pyteomics>=4.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "tensorboard",
    "pytorch-lightning>=1.6.5",
]
ml = [
    "catboost>=1.0.6",
    "xgboost>=1.2.1",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/gomesgroup/medusa"
"Bug Tracker" = "https://github.com/gomesgroup/medusa/issues"

[tool.setuptools]
packages = ["mass_automation"] 